nullable student update
